--- a/css/styles.css
+++ b/css/styles.css
@@ -94,11 +94,52 @@ width: 910px;
   padding: 3px;
 }
 
+.about img {
+  height: 20px;
+  display: inline-block;
+}
+
+.options-container {
+  margin-bottom: 10px;
+}
+
+.bgbutton {
+ width: 80%;
+ margin-left: 10%;
+ font-family: 'Inconsolata';
+ font-size: 1.5em;
+}
+
+.options-container .subtitle {
+  display: inline-block;
+  width: 30%;
+  text-align: center;
+}
+
+.options-container select{
+  width: 30%;
+  margin-left: 1%;
+  font-family: 'Inconsolata';
+  text-align: center;
+}
+
+.about {
+  font-family: 'Inconsolata';
+  font-size: 1.5em;
+  padding: 10px;
+  text-align: center;
+  line-height: 1.7em;
+}
+
+.we {
+  font-style: italic;
+}
+
 #options h3 {
   text-align: center;
   margin: 0;
-  padding: 0;
-  font-family: 'Pacifico';
+  padding: 20px;
+  font-family: 'Inconsolata';
   font-size: 1.5em;
 }
 
