adding new random loading screen

--- a/views/random.ejs
+++ b/views/random.ejs
@@ -19,5 +19,6 @@
   </div>
 </div>
   <button id="anotherRandom">another random comic</button>
+  <img id='loadingcomic' src="/img/loadingcomic.png">
 </body>
 </html>
