troubleshooting stretched canvas

--- a/views/create.ejs
+++ b/views/create.ejs
@@ -172,7 +172,8 @@
   <img id='speechright' src='/emojis/speechright.png'>
   <img id='thoughtleft' src='/emojis/thoughtleft.png'>
   <img id='thoughtright' src='/emojis/thoughtright.png'>
-  <canvas id="newCanvas"></div>
+  <canvas id="newCanvas" width="910" height="310"></div>
+
 </div>
 </body>
 </html>
