--- a/views/random.ejs
+++ b/views/random.ejs
@@ -16,6 +16,7 @@
 <img src="<%= img %>"/>
   </div>
   <div id="comicauthor">by <%= author %></div>
+  <input class="randomdeliverylink" type="text" value="https://emojicomic.herokuapp.com/comics/<%= shortid %>">
   </div>
 </div>
   <button id="anotherRandom">another random comic</button>
