--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -35,8 +35,15 @@ body, html {
 
 .deliverylink {
   text-align: center;
-  margin-top: 20px;
+  margin: 20px auto;
   font-size: 2em;
+}
+
+.randomdeliverylink {
+  text-align: center;
+  margin: 20px 30%;
+  font-size: 1.5em;
+  width: 40%;
 }
 
 #welcomeimage {
