trying something for retina

--- a/views/create.ejs
+++ b/views/create.ejs
@@ -3,7 +3,7 @@
 <head>
   <script type="text/javascript" src="/js/vendor/paper.js"></script>
   <script type="text/javascript" src="/js/vendor.js"></script>
-
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <script type="text/paperscript" canvas="myCanvas" src="/js/scripts.js"></script>
 
   <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
