speech bubble fixes

--- a/views/random.ejs
+++ b/views/random.ejs
@@ -15,7 +15,7 @@
   <div id="comic">
 <img src="<%= img %>"/>
   </div>
-  <div id="comicauthor">by <%= author %></div>
+  <div id="comicauthor">by <span id='author'><%= author %></span></div>
   <input class="randomdeliverylink" type="text" value="https://emojicomic.herokuapp.com/comics/<%= shortid %>">
   </div>
 </div>
