speech bubbles now work

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -21,6 +21,11 @@ body, html {
   font-size: 1.5em;
 }
 
+#comic img {
+  height: 310px;
+  width: 910px;
+}
+
 #downloadlinks {
   width: 100%;
   text-align: center;
