--- a/views/comicshow.ejs
+++ b/views/comicshow.ejs
@@ -18,6 +18,8 @@
   </div>
   <div id="comicauthor">by <%= author %></div>
   </div>
+  <div id="linkz"><a href="/comics/create">make your own emoji comic</a> | <a href="/comics/random">view random comics</a>
+  </div>
 </div>
 </body>
 </html>
