--- a/views/create.ejs
+++ b/views/create.ejs
@@ -39,21 +39,17 @@
             <img src='/emojis/speechleft.png'>
             <img src='/emojis/speechleft.png'>
             <img src='/emojis/speechleft.png'>
-            <img src='/emojis/speechleft.png'>
           </div>
           <div class="optionicon" data-click="backgroundsoption">
             <img src='/emojis/backgroundicon1.png'>
             <img src='/emojis/backgroundicon2.png'>
             <img src='/emojis/backgroundicon3.png'>
-            <img src='/emojis/backgroundicon4.png'>
           </div>
           <div id="downloadtab" class="optionicon" data-click="save">
-            <img src='/emojis/down.png'>
             <img src='/emojis/downloadicon2.png'>
           </div>
           <div class="optionicon" data-click="info">
             <img src='/emojis/info.png'>
-            <img src='/emojis/cool.png'>
           </div>
         </div>
         <div id="options">
@@ -94,11 +90,11 @@
           <input type="radio" id="radioFontS" name="fontsize" value="10">
           <label for="radioFontS">small</label>
           <input type="radio" id="radioFontM" name="fontsize" checked="checked" value="20">
-          <label for="radioFontM">normal</label>
+          <label for="radioFontM">medium</label>
           <input type="radio" id="radioFontL" name="fontsize" value="30">
           <label for="radioFontL">big</label>
-          <input type="radio" id="radioFontRobot" name="fontface" value="Inconsolata">
           <br>
+          <input type="radio" id="radioFontRobot" name="fontface" value="Inconsolata">
           <label class="robotfont" for="radioFontRobot">robot</label>
           <input type="radio" id="radioFontNormal" name="fontface" checked="checked" value="Open Sans">
           <label class="normalfont" for="radioFontNormal">normal</label>
