--- a/views/comicshow.ejs
+++ b/views/comicshow.ejs
@@ -1,14 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script type="text/javascript" src="/js/vendor.js"></script>
+<!--
+ _______   _____ ______   ________        ___  ___
+|\  ___ \ |\   _ \  _   \|\   __  \      |\  \|\  \
+\ \   __/|\ \  \\\__\ \  \ \  \|\  \     \ \  \ \  \
+ \ \  \_|/_\ \  \\|__| \  \ \  \\\  \  __ \ \  \ \  \
+  \ \  \_|\ \ \  \    \ \  \ \  \\\  \|\  \\_\  \ \  \
+   \ \_______\ \__\    \ \__\ \_______\ \________\ \__\
+    \|_______|\|__|     \|__|\|_______|\|________|\|__|
 
+
+
+ ________  ________  _____ ______   ___  ________  ________
+|\   ____\|\   __  \|\   _ \  _   \|\  \|\   ____\|\   ____\
+\ \  \___|\ \  \|\  \ \  \\\__\ \  \ \  \ \  \___|\ \  \___|_
+ \ \  \    \ \  \\\  \ \  \\|__| \  \ \  \ \  \    \ \_____  \
+  \ \  \____\ \  \\\  \ \  \    \ \  \ \  \ \  \____\|____|\  \
+   \ \_______\ \_______\ \__\    \ \__\ \__\ \_______\____\_\  \
+    \|_______|\|_______|\|__|     \|__|\|__|\|_______|\_________\
+                                                     \|_________|
+
+ -->
+
+  <script type="text/javascript" src="/js/vendor.js"></script>
   <script type="text/javascript" src="/js/display.js"></script>
+
+  <meta name="description" content="Make comic strips with emojis. Extremely fun and excellent.">
+
+
 
   <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="/css/styles.css">
+  <title>View A Comic | Emoji Comics</title>
+
 </head>
 <body>
 
