--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -48,6 +48,13 @@ body, html {
   font-size: 2em;
 }
 
+.mainpagelink {
+  display: inline;
+  font-size: 1.5em;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
 .randomdeliverylink {
   text-align: center;
   margin: 20px 30%;
