added link to create on random display page

--- a/views/random.ejs
+++ b/views/random.ejs
@@ -44,9 +44,10 @@
   </div>
   <div id="comicauthor">by <span id='author'><%= author %></span></div>
   <input class="randomdeliverylink" type="text" value="https://emojicomic.herokuapp.com/comics/<%= shortid %>">
+  <button id="anotherRandom">another random comic</button>
+  <a class="mainpagelink" href="/comics/create">make a comic</a>
   </div>
 </div>
-  <button id="anotherRandom">another random comic</button>
   <img id='loadingcomic' src="/img/loadingcomic.png">
 </body>
 </html>
