--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -49,7 +49,7 @@ body, html {
 }
 
 .mainpagelink {
-  display: inline;
+  display: block;
   font-size: 1.5em;
   text-align: center;
   margin-bottom: 10px;
@@ -70,10 +70,15 @@ body, html {
 
 #anotherRandom {
   font-family: 'Pacifico';
-  font-size: 3em;
-  height: 100px;
+  font-size: 1.5em;
+  height: 60px;
   width: 40%;
   margin: 10px 30%;
+}
+
+#randomlinks {
+  width: 100%;
+  display: inline-block;
 }
 
 #maintitle {
