--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,7 +45,7 @@
     <div class="wrapper">
       <img id="welcomeimage" src="/img/welcome.png">
       <h3 id="maintitle">emoji comic creator</h3>
-  <a class="mainpagelink" href="/comics/create">make a comic</a> |
+  <a class="mainpagelink" href="/comics/create">make a comic</a>
    <a class="mainpagelink" href="/comics/random">view random comics</a>
   </div>
 </div>
