adding bar background

--- a/views/create.ejs
+++ b/views/create.ejs
@@ -157,6 +157,7 @@
     <img id='bgSpace' src='/backgrounds/space.jpg'>
     <img id='bgJungle' src='/backgrounds/jungle.jpg'>
     <img id='bgWave' src='/backgrounds/bgwave.jpg'>
+    <img id='bgBar' src='/backgrounds/bar.jpg'>
 
 
     <img id='trash' src='/emojis/trash.png'>
