--- a/views/create.ejs
+++ b/views/create.ejs
@@ -22,8 +22,9 @@
           <span id="numberLoaded"></span>
 
           <span id="loadButtons">
-            <button id="moreEmojis">load more emojis</button>
-            <button id="allEmojis">load all emojis</button>
+            <button id="moreEmojis">load more</button>
+            <button id="allEmojis">load all</button>
+            <button id="flipEmojis"> <img src="/emojis/rightarrow.png">flip emojis</button>
           </span>
           <span id="recent">recently used:</span>
 
