--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,9 @@
 
    -->
   <script type="text/javascript" src="/js/vendor.js"></script>
-  <script type="text/paperscript" canvas="myCanvas" src="/js/scripts.js"></script>
+  <script type="text/javascript" src="/js/slick.js"></script>
+  <script type="text/javascript" src="/js/scripts/slickuser.js"></script>
+
 
   <meta name="description" content="Make comic strips with emojis. Extremely fun and excellent.">
 
@@ -33,6 +35,8 @@
   <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
   <link rel="stylesheet" type="text/css" href="/css/styles.css">
+  <link rel="stylesheet" type="text/css" href="/css/slick.css">
+
   <title>Emoji Comics</title>
 
 
@@ -43,10 +47,19 @@
 <body>
   <div id="container">
     <div class="wrapper">
-      <img id="welcomeimage" src="/img/welcome.png">
-      <h3 id="maintitle">emoji comic creator</h3>
+      <div id="maintitle">emoji comic creator</div>
+      <div class="carousel-container">
+      <div class="carousel">
+        <div><img src="img/example1.png"></div>
+        <div><img src="img/example2.png"></div>
+        <div><img src="img/example3.png"></div>
+        <div><img src="img/example4.png"></div>
+        <div><img src="img/example5.png"></div>
+      </div>
+      </div>
   <a class="mainpagelink" href="/comics/create">make a comic</a>
    <a class="mainpagelink" href="/comics/random">view random comics</a>
+
   </div>
 </div>
 </body>
