removing carousel config from main js file

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -50,6 +50,7 @@ body, html {
 
 .mainpagelink {
   display: block;
+  font-family: 'Pacifico';
   font-size: 1.5em;
   text-align: center;
   margin-bottom: 10px;
