--- a/public/css/slick.css
+++ b/public/css/slick.css
@@ -26,22 +26,35 @@
 /* Icons */
 @font-face { font-family: "slick"; src: url("./fonts/slick.eot"); src: url("./fonts/slick.eot?#iefix") format("embedded-opentype"), url("./fonts/slick.woff") format("woff"), url("./fonts/slick.ttf") format("truetype"), url("./fonts/slick.svg#slick") format("svg"); font-weight: normal; font-style: normal; }
 /* Arrows */
-.slick-prev, .slick-next { position: absolute; display: block; height: 20px; width: 20px; line-height: 0; font-size: 0; cursor: pointer; background: transparent; color: transparent; top: 50%; margin-top: -10px; padding: 0; border: none; outline: none; }
+.slick-prev, .slick-next { position: absolute; display: block; height: 64px; width: 64px; line-height: 0; font-size: 0; cursor: pointer; background: transparent; color: transparent; top: 50%; margin-top: -32px; padding: 0; border: none; outline: none;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+
+ }
 .slick-prev:hover, .slick-prev:focus, .slick-next:hover, .slick-next:focus { outline: none; background: transparent; color: transparent; }
 .slick-prev:hover:before, .slick-prev:focus:before, .slick-next:hover:before, .slick-next:focus:before { opacity: 1; }
 .slick-prev.slick-disabled:before, .slick-next.slick-disabled:before { opacity: 0.25; }
 
 .slick-prev:before, .slick-next:before { font-family: "slick"; font-size: 20px; line-height: 1; color: white; opacity: 0.75; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
 
-.slick-prev { left: -25px; }
+.slick-prev { left: -64px; }
 [dir="rtl"] .slick-prev { left: auto; right: -25px; }
 .slick-prev:before { content: "←"; }
 [dir="rtl"] .slick-prev:before { content: "→"; }
 
-.slick-next { right: -25px; }
+.slick-next { right: -64px; }
 [dir="rtl"] .slick-next { left: -25px; right: auto; }
 .slick-next:before { content: "→"; }
 [dir="rtl"] .slick-next:before { content: "←"; }
+
+.slick-next:hover, .slick-prev:hover {
+  -webkit-transform: scale(1.05);
+  transform: scale(1.05);
+}
 
 /* Dots */
 .slick-slider { margin-bottom: 30px; }
