--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,6 +30,7 @@
 
   <meta name="description" content="Make comic strips with emojis. Extremely fun and excellent.">
 
+  <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
@@ -40,7 +41,7 @@
   <title>Emoji Comics</title>
 </head>
 <body>
-  <div id="container">
+
     <div class="wrapper">
       <div id="maintitle">emoji comic creator</div>
       <div class="carousel-container">
@@ -52,10 +53,9 @@
         <div><img src="img/example5.png"></div>
       </div>
       </div>
-  <a class="mainpagelink" href="/comics/create">make a comic</a>
-   <a class="mainpagelink" href="/comics/random">view random comics</a>
-
-  </div>
+      <div class="mainlinks">
+  <a class="mainpagelink" href="/comics/create">MAKE A COMIC</a> <a class="mainpagelink" href="/comics/random">VIEW RANDOM COMICS</a>
 </div>
+  </div>
 </body>
 </html>
