--- a/views/random.ejs
+++ b/views/random.ejs
@@ -40,12 +40,11 @@
 </head>
 <body>
   <% include /partials/header %>
-
   <div id="comic-container">
   <div id="comic">
 <img src="<%= img %>"/>
   </div>
-  <div id="comicauthor">(C) 2014 <span id='author'><%= author %>.</span><br>Redistribution hella encouraged.</div>
+  <div id="comicauthor"><img src='/emojis/tm.png'> <img src='/emojis/copyright.png'> <span id='author'><%= author %>, <%= date %>.</span><br>Redistribution Hella Encouraged.</div>
 
   </div>
 </div>
