extracted comic display into partial

--- a/views/random.ejs
+++ b/views/random.ejs
@@ -40,14 +40,8 @@
 </head>
 <body>
   <% include /partials/header %>
-  <div id="comic-container">
-  <div id="comic">
-<img src="<%= img %>"/>
-  </div>
-  <div id="comicauthor"><img src='/emojis/tm.png'> <img src='/emojis/copyright.png'> <span id='author'><%= author %>, <%= date %>.</span><br>Redistribution Hella Encouraged.</div>
+  <% include /partials/comicdisplay %>
 
-  </div>
-</div>
   <input class="randomdeliverylink" type="text" value="https://emojicomic.herokuapp.com/comics/<%= shortid %>">
   <button id="anotherRandom">another random comic</button>
   <img id='loadingcomic' src="/img/loadingcomic.png">
