--- a/views/comicshow.ejs
+++ b/views/comicshow.ejs
@@ -39,16 +39,7 @@
 </head>
 <body>
   <% include /partials/header %>
+  <% include /partials/comicdisplay %>
 
-  <div id="comic-container">
-  <div id="comic">
-<img src="<%= img %>"/>
-  </div>
-  <div id="comicauthor">by <%= author %></div>
-
-  </div>
-  <div id="linkz"><a href="/comics/create">make your own emoji comic</a> | <a href="/comics/random">view random comics</a>
-  </div>
-</div>
 </body>
 </html>
