--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -23,8 +23,9 @@ body, html {
   background-image: url('/img/ricepaper2.png');
   background-color: white;
   border: 2px solid black;
-
+  /*border-radius: 120px 12px / 14px 120px;*/
 }
+
 
 #authorname {
   margin: 0 15%;
@@ -78,10 +79,16 @@ body, html {
 }
 
 .randomdeliverylink {
-  text-align: center;
-  margin: 3px 30%;
-  font-size: 1.1em;
-  width: 40%;
+  text-align: right;
+  width: auto;
+  margin-right: 30px;
+  text-transform: none;
+  float: right;
+}
+
+.randomdeliverylink a {
+  text-decoration: underline;
+  color: black;
 }
 
 #welcomeimage {
@@ -225,7 +232,7 @@ body, html {
   margin-bottom: 10px;
   text-align: center;
   margin-right: 10px;
-  font-family: 'Inconsolata';
+  font-family: 'Lato';
 }
 
 #flipEmojis {
