--- a/views/partials/comicdisplay.ejs
+++ b/views/partials/comicdisplay.ejs
@@ -4,11 +4,9 @@
   <div id="comic">
 <img src="<%= img %>"/>
   </div>
-  <div id="comicauthor"><img src='/emojis/tm.png'> <img src='/emojis/copyright.png'> <span id='author'><%= author %>, <%= date %>.</span>
-  <span class="randomdeliverylink"><a href="https://emojicomic.herokuapp.com/comics/<%= shortid %>">permalink</a></span>
-  <br>Redistribution Hella Encouraged.
-
+  <div id="comicauthor"><img src='/emojis/tm.png'> <img src='/emojis/copyright.png'> <span id='author'><%= author %>, <%= date %></span>
+  <span class="randomdeliverylink"><a class='deliverylink' href="https://emojicomic.herokuapp.com/comics/<%= shortid %>">permalink</a></span>
+  <br>Redistribution Hella Encouraged
   </div>
-
   </div>
 </div>
