--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,3 @@
 <div id="header">
-  Emoji Comics. ->
-  <a href="/comics/create">Comic Creator</a> |
-  <a href="/comics/random">View Random Comics</a>
+  <a href="/">Emoji Comics</a>
 </div>
