--- a/views/random.ejs
+++ b/views/random.ejs
@@ -29,11 +29,11 @@
 
   <meta name="description" content="Make comic strips with emojis. Extremely fun and excellent.">
 
-  <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="/css/styles.css">
+  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
   <title>Random Comic | Emoji Comics</title>
 
 
@@ -43,6 +43,8 @@
   <% include /partials/comicdisplay %>
 
   <button id="anotherRandom">another random comic</button>
+  <a href="/comics/create"><button id="createComic">make a comic</button></a>
+
   <img id='loadingcomic' src="/img/loadingcomic.png">
 </body>
 </html>
