--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,6 +4,43 @@ body, html {
   background-color: #A2DED0;
   font-family: 'Lato'; }
 
+label {
+  display: inline-block;
+  color: #FFF;
+  height: 32px;
+  background-color: #36D7B7;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  border: solid 1px #20538D;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
+  outline: none;
+  user-select: none;
+  -webkit-transition-duration: 0.2s;
+  -moz-transition-duration: 0.2s;
+  transition-duration: 0.2s;
+  vertical-align: middle; }
+  label img {
+    width: 30%;
+    margin: 0px 35%; }
+
+.label-3rd {
+  width: 110px;
+  margin-left: 20px;
+  text-align: center;
+  line-height: 32px; }
+
+.label-4th {
+  width: 90px;
+  margin-left: 12px; }
+
+.labelrow {
+  height: 45px;
+  margin: 0; }
+
 input[type=radio] {
   display: none; }
 
@@ -56,6 +93,12 @@ button:active {
   box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.6);
   background: #2E5481;
   border: solid 1px #203E5F; }
+
+.fontsmall {
+  font-size: .7em; }
+
+.fontbig {
+  font-size: 1.4em; }
 
 #header {
   color: black;
@@ -178,11 +221,11 @@ button:active {
   font-family: 'Pacifico'; }
 
 .normalfont {
-  font-family: "Open Sans"; }
+  font-family: 'Lato'; }
 
 input[type="radio"]:checked + label {
-  background-color: gray;
-  font-size: 1.5em; }
+  background-color: white;
+  color: black; }
 
 .optionicon {
   width: 90px;
@@ -219,10 +262,6 @@ input[type="radio"]:checked + label {
 #hiddenoptions {
   display: none; }
 
-#textcontainer {
-  overflow: hidden;
-  padding: 0em .5em; }
-
 .helpimg {
   height: 20px;
   display: inline-block;
@@ -230,6 +269,29 @@ input[type="radio"]:checked + label {
 
 .options-container {
   margin-bottom: 10px; }
+
+#textGo {
+  display: inline;
+  margin: 0px auto;
+  float: right;
+  margin-right: 3px;
+  height: 35px;
+  width: 45%; }
+
+#textInput {
+  line-height: 30px;
+  font-size: 1.1em;
+  height: 30px;
+  width: 45%;
+  margin-left: 3px;
+  float: left; }
+
+#textcontainer {
+  margin-bottom: 10px;
+  overflow: hidden;
+  padding: 5px 5px;
+  height: 35px;
+  border-bottom: 2px solid black; }
 
 #comic-container {
   width: 910px;
