--- a/sass/buttons.scss
+++ b/sass/buttons.scss
@@ -1,3 +1,49 @@
+label {
+  display: inline-block;
+ // margin: 20px auto;
+ color: #FFF;
+ height: 32px;
+ background-color: #36D7B7;
+ -webkit-border-radius: 4px;
+ -moz-border-radius: 4px;
+ border-radius: 4px;
+ border: solid 1px #20538D;
+ text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
+ -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
+ -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
+ box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
+ outline: none;
+ user-select: none;
+ -webkit-transition-duration: 0.2s;
+ -moz-transition-duration: 0.2s;
+ transition-duration: 0.2s;
+     vertical-align:middle;
+  img {
+    width: 30%;
+    margin: 0px 35%;
+  }
+}
+
+
+.label-3rd {
+  width: 110px;
+  margin-left: 20px;
+  text-align: center;
+  line-height: 32px;
+}
+
+
+.label-4th {
+  width: 90px;
+  margin-left: 12px;
+}
+
+.labelrow {
+  height: 45px;
+  margin: 0;
+  // display: block;
+}
+
 input[type=radio] {
   display: none;
 }
@@ -64,4 +110,12 @@ button:active {
   box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.6);
   background: #2E5481;
   border: solid 1px #203E5F;
+}
+
+.fontsmall {
+  font-size: .7em;
+}
+
+.fontbig {
+  font-size: 1.4em;
 }
