--- a/sass/buttons.scss
+++ b/sass/buttons.scss
@@ -26,22 +26,21 @@ label {
 
 
 .label-3rd {
-  width: 110px;
-  margin-left: 20px;
+  width: 121px;
+  margin-right: 21px;
   text-align: center;
   line-height: 32px;
 }
 
 
 .label-4th {
-  width: 90px;
-  margin-left: 12px;
+  width: 91px;
+  margin-right: 12px;
 }
 
 .labelrow {
   height: 45px;
-  margin: 0;
-  // display: block;
+  margin-left: 12px;
 }
 
 input[type=radio] {
